--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 # State management
-  flutter_bloc: ^7.0.0
+  bloc: ^7.2.0-dev.1
+  flutter_bloc: ^7.2.0
 # Project's dep
   http: ^0.13.3
   meta_weather:
