--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     version: ^0.0.1
     git: git@github.com:jonasjuni/meta_weather.git
   json_annotation: ^4.1.0
+  geolocator: ^7.6.0
     
 dev_dependencies:
   build_runner: ^2.1.2
