--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     git: git@github.com:jonasjuni/meta_weather.git
   json_annotation: ^4.1.0
   geolocator: ^7.6.0
+  material_floating_search_bar: ^0.3.4
     
 dev_dependencies:
   build_runner: ^2.1.2
