--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 # State management
-  bloc: ^7.2.0-dev.1
+  bloc: ^7.2.0
   flutter_bloc: ^7.2.0
 # Project's dep
   http: ^0.13.3
   meta_weather:
-    version: ^0.0.1
+    version: ^0.1.0
     git: git@github.com:jonasjuni/meta_weather.git
   json_annotation: ^4.1.0
   geolocator: ^7.6.0
   material_floating_search_bar: ^0.3.4
+  lottie: ^1.2.0
     
 dev_dependencies:
   build_runner: ^2.1.2
@@ -67,7 +68,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/
+    - assets/animations/
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
