--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 # Project's dep
   http: ^0.13.3
   meta_weather:
-    version: ^0.1.0
+    version: ^0.2.0
     git: git@github.com:jonasjuni/meta_weather.git
   json_annotation: ^4.1.0
   geolocator: ^7.6.0
@@ -68,7 +68,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/animations/
+    - assets/animations/weather/
     - assets/icons/
     - assets/images/
 
