--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
   assets:
     - assets/animations/weather/
     - assets/icons/
-    - assets/images/
+    - assets/images/background/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
