--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   meta_weather:
     version: ^0.2.0
     git: git@github.com:jonasjuni/meta_weather.git
-  json_annotation: ^4.1.0
+  json_annotation: ^4.3.0
   geolocator: ^7.6.0
   material_floating_search_bar: ^0.3.4
   lottie: ^1.2.0
+  stream_transform: ^2.0.0
     
 dev_dependencies:
   build_runner: ^2.1.2
@@ -49,7 +50,7 @@ dev_dependencies:
   flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
-  json_serializable: ^5.0.0
+  json_serializable: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
