--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   material_floating_search_bar: ^0.3.4
   lottie: ^1.2.0
   stream_transform: ^2.0.0
+  hydrated_bloc: ^7.1.0
+  path_provider: ^2.0.5
     
 dev_dependencies:
   build_runner: ^2.1.2
