--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   stream_transform: ^2.0.0
   hydrated_bloc: ^7.1.0
   path_provider: ^2.0.5
+  fl_chart: ^0.40.2
     
 dev_dependencies:
   build_runner: ^2.1.2
