--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hydrated_bloc: ^7.1.0
   path_provider: ^2.0.5
   fl_chart: ^0.40.2
+  google_maps_flutter: ^2.0.11
     
 dev_dependencies:
   build_runner: ^2.1.2
