--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fl_chart: ^0.40.2
   google_maps_flutter: ^2.0.11
   timezone: ^0.8.0
+  flutter_slidable: ^0.6.0
     
 dev_dependencies:
   build_runner: ^2.1.2
