--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_maps_flutter: ^2.1.0
   timezone: ^0.8.0
   flutter_slidable: ^1.1.0
+  url_launcher: ^6.0.15
     
 dev_dependencies:
   build_runner: ^2.1.2
