--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <!-- Google Maps -->
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBgFybLy5Qcjc2vZpRog4RX4vC8_-uRooM"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="${mapsApiKey}"/>
     </application>
         <!-- Location Permission -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
