change application id for store deploy

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.clima_mais">
+    package="dev.jcsj.clima_mais">
    <application
         android:label="Clima Mais"
         android:icon="@mipmap/ic_launcher">
@@ -31,6 +31,7 @@
         <!-- Google Maps -->
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="${mapsApiKey}" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <!-- Location Permission -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
