--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,37 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+- master
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+  - stage: Build
+    displayName: Building
+    jobs:
+      - job: Install_Flutter
+        displayName: Installing flutter...
+        steps:
+        - task: FlutterInstall@0
+          inputs:
+            mode: 'auto'
+            channel: 'stable'
+            version: 'latest'
+        - task: FlutterCommand@0
+          inputs:
+            projectDirectory: '.'
+            arguments: '-v gen-l10n'
+        - task: FlutterBuild@0
+          inputs:
+            target: 'aab'
+            projectDirectory: '.'
+        - task: ArchiveFiles@2
+          inputs:
+            rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build/app/output/bundle/release/app-release.aab'
+            includeRootFolder: false
+            archiveType: tar
+            archiveFile: $(Build.ArtifactStagingDirectory)/clima_mais-$(Build.BuildId).tar.gz
+            replaceExistingArchive: true
+        - publish: $(Build.ArtifactStagingDirectory)/clima_mais-$(Build.BuildId).tar.gz
+          artifact: android
