--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^0.13.3
   meta_weather:
     version: ^0.2.0
-    git: git@github.com:jonasjuni/meta_weather.git
+    git: https://github.com/jonasjuni/meta_weather.git
   json_annotation: ^4.3.0
   geolocator: ^7.6.0
   material_floating_search_bar: ^0.3.4
