--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+- main
 
 pool:
   vmImage: ubuntu-latest
@@ -13,40 +13,37 @@ stages:
   - stage: Build
     displayName: Building
     jobs:
-      - job: Install_Flutter
-        displayName: Installing flutter...
+      - job: Android_Build
+        displayName: 🏗️ Building GooglePlay App Bundle
         steps:
-        - task: FlutterInstall@0
-          inputs:
-            mode: 'auto'
-            channel: 'stable'
-            version: 'latest'
         - task: DownloadSecureFile@1
           name: keystore
           inputs:
             secureFile: 'upload-keystore.jks'
-
         - task: DownloadSecureFile@1
           name: key
           inputs:
             secureFile: 'key.properties'
-            
+
         - script: ln -s -t $(System.DefaultWorkingDirectory)/android/ $(key.secureFilePath)
-        
+          displayName: Creating key.properties on $(System.DefaultWorkingDirectory)/android/
+        - task: FlutterInstall@0
+          displayName: 💙 Installing Flutter
+          inputs:
+            mode: 'auto'
+            channel: 'stable'
+            version: 'latest'
         - task: FlutterCommand@0
+          displayName: 🌎 Generating localizations files
           inputs:
             projectDirectory: '.'
             arguments: '-v gen-l10n'
         - task: FlutterBuild@0
+          displayName: 📝 building and signing app bundle
           inputs:
             target: 'aab'
             projectDirectory: '.'
-        - task: ArchiveFiles@2
-          inputs:
-            rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build/app/outputs/bundle/release/app-release.aab'
-            includeRootFolder: false
-            archiveType: tar
-            archiveFile: $(Build.ArtifactStagingDirectory)/clima_mais-$(Build.BuildId).tar.gz
-            replaceExistingArchive: true
-        - publish: $(Build.ArtifactStagingDirectory)/clima_mais-$(Build.BuildId).tar.gz
+
+        - publish: $(System.DefaultWorkingDirectory)/build/app/outputs/bundle/release/app-release.aab
           artifact: android
+          displayName: 🏺 Uploading app bundle artifact
