--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
     displayName: Building
     jobs:
       - job: Android_Build
-        displayName: 🏗️ Building GooglePlay App Bundle
+        displayName: 🏗️ Building GooglePlay App Bundle N° $(Build.BuildNumber)
         steps:
         - task: DownloadSecureFile@1
           name: keystore
